# invoicing-assistant

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: handoff.md
docs/: 00-overview.md  01-data-contracts.md  02-reconciliation.md  03-morning-bridge.md  04-imap-skill.md  05-rules-skill.md  06-build-plan.md  07-acceptance.md  08-phase2-validation-notes.md  PROJECT-STATE-POST-1.6.md  RUNBOOK.md  STATUS.md  mail-evidence-SPEC.md
morning-bridge/morning_bridge/: __init__.py  cli.py  client.py  drafts.py  reads.py
morning-bridge/tests/: test_client.py  test_drafts.py  test_surface.py
scripts/: fetch_invoices.py  project_ledger.py  run_month.py  thread_index.py
sheets/: normalize_price_list.py  requirements.txt  schema.py  setup.py
sheets/seed/: agreements.csv  client_profiles.csv  config.csv  ledger.csv  opening_balances.csv  price_book.csv
skills/imap-fetch/: probe_connection.py
skills/imap-fetch/imap_fetch/: __init__.py  cli.py  client.py  fetch.py  watermark.py
skills/imap-fetch/tests/: test_fetch.py  (+1 more)
skills/mail-evidence/: pyproject.toml
skills/mail-evidence/mail_evidence/: __init__.py  assemble.py  config.py  dedup.py  pipeline.py  promote.py  protocols.py  records.py  render.py  runner.py  tiering.py
skills/mail-evidence/mail_evidence/fetch/: imap.py  offline.py  watermark.py
skills/mail-evidence/tests/: test_assemble.py  test_dedup.py  test_fetch_readonly.py  test_offline.py  test_pipeline.py  test_portability.py  test_promote.py  test_render.py  test_runner.py  test_tiering.py
(+33 files in other folders)
