[project]
name = "invoicing-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "imapclient>=3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = [
    "morning-bridge/tests",
    "skills/imap-fetch/tests",
    "skills/transcripts/tests",
]
pythonpath = [
    "morning-bridge",
    "skills/imap-fetch",
    "skills/transcripts",
]
