[project]
name = "mail-evidence"
version = "0.1.0"
description = "Portable mail->evidence conditioning engine (multi-account IMAP fetch, threading, dedup, relevance tiering)."
requires-python = ">=3.11"
dependencies = [
    "imapclient>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
keychain = ["keyring>=24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mail_evidence"]
